<resources>
    <string name="app_name">Remote Control Star</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Remote Control Star</string>
    <string name="device_name">CTRL</string>
    <string name="toast">TOAST</string>
    <string name="study_radio">Study code</string>
    <string name="known_radio">known code</string>
    <string name="timeout">Timeout</string>
    <string name="title_studying"><![CDATA[Are learning...]]></string>
    <string name="title_studyed">Learning success</string>
    <string name="title_about">About</string>
    <string name="study_alert"><![CDATA[Please specify a button to learn"]]></string>
    <string name="study_info"><![CDATA[Please be learned remote control transmitter head close alignment receiver transmitter head, a distance of about 3CM, and long learning keys 1 to 2S]]></string>
    <string name="study_test">Test data</string>
    <string name="study_repeat">Re-learning</string>
    <string name="study_next">Learning the next</string>
    <string name="study_save">Save data</string>
    <string name="study_exit">Quit learning</string>
    <string name="about_ok">OK</string>
    <string name="device_type">Device Type</string>
    <string name="name_text">Device Name</string>
    <string name="count_text"></string>
    <string name="auto_text">Auto</string>
    <string name="stop_text">Stop</string>
    <string name="up_text">Up</string>
    <string name="down_text">Down</string>
    <string name="manual_text">manually</string>
    <string name="save_text">Save</string>
    <string name="language">
<![CDATA[
        	1.Software installation:"*. Apk" files copied or downloaded to the phone memory card 
        	through the "document management" or "File Manager" to find the file, 
        	click on the relevant directory follow the prompts to install, 
        	the system will generate: "mobile phone remote control icon;\n
			2. Used for the first time to code value learning copy code search:\n
    			\t\t2.1, code value learning copy: 
    			election related equipment / menu / learning / specify a key / will be 
    			learning remote control transmitter head close alignment transmitter head and 
    			press the key to be learned-2S, follow the prompts operation 
    			("test data", "re-learn", "learning to the next", "quit learning") ...... 
    			repeat operation have been the end of all the keys, 
    			learning completed press "quit learning" to exit the software.\n
    			\t\t2.2, the code search: turn on the device, choose the appropriate device type, 
    			brand or region name, then Press the automatic Jianniu the pairing device reaction: 
    			such as switch machines, and out of positions, the volume change action, 
    			press Stop and then press Save, check button is normal, not normal, repeat 
    			operation can also manually upward, downward Search single brand or single area 
    			to search pairing can not be in all brands or regions within the search code.\n
			3.The code value learning to copy or exit the software, code search, and once again start to replace more than one wife remote control.]]>
    </string>
    <string name="about_info">
<![CDATA[HONG XIN DA TECHNOLOGY CO.,LTD. SHENZHEN\n
        							   http://www.hxdkj88.com\n
        							        QQ: 2686603019\n
        							        QQ: 305106487\n
        							        Version:v2.0.1]]>
    </string>
    <string name="Long"><![CDATA[YONG LONG  TECHNOLOGY CO.,LTD. SHENZHEN]]></string>
    <string name="LongAbout">
<![CDATA[YONG LONG  TECHNOLOGY CO.,LTD. SHENZHEN\n
        							   http://moshl.cn.alibaba.com\n
        							         ＱＱ：616083613\n
        							          Version:v1.0.1]]>
    </string>
    <string name="Clean"></string>
    <string name="CleanAbout"><![CDATA[Version:v2.0.2\n]]></string>
    <string name="bt_name">BT</string>
    <string name="bt_uuid"><![CDATA[00001101-0000-1000-8000-00805f9b34fb]]></string>
    <string name="bt_not_connect">Device is not connected</string>
    <string name="bt_lost_connect">The device is disconnected</string>
    <string name="bt_connecting"><![CDATA[Connecting....]]></string>
    <string name="bt_connected">Is connected </string>
    <string name="bt_error">Bluetooth can not start</string>
    <string name="splash_loading"><![CDATA[Loading...]]></string>
    <string name="str_title">Warning</string>
    <string name="str_message">Quit?</string>
    <string name="str_ok">OK</string>
    <string name="str_back">Return</string>
    <string name="str_find">Search</string>
    <string name="scanning">Scanning device</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No equipment paired</string>
    <string name="none_found">Did not find the device</string>
    <string name="str_paired_devices">Paired devices</string>
    <string name="str_other_devices">Other available equipment</string>
    <string name="tv">tv</string>
    <string name="str_tv">TV</string>
    <string name="tv_power">ON/OFF</string>
    <string name="tv_mute">Mute</string>
    <string name="tv_key0">0</string>
    <string name="tv_key1">1</string>
    <string name="tv_key2">2</string>
    <string name="tv_key3">3</string>
    <string name="tv_key4">4</string>
    <string name="tv_key5">5</string>
    <string name="tv_key6">6</string>
    <string name="tv_key7">7</string>
    <string name="tv_key8">8</string>
    <string name="tv_key9">9</string>
    <string name="tv_key10"><![CDATA[-/]]></string>
    <string name="tv_menu">Menu</string>
    <string name="tv_chadd">CH+</string>
    <string name="tv_chsub">CH-</string>
    <string name="tv_voladd">Vol+</string>
    <string name="tv_volsub">Vol-</string>
    <string name="tv_ok">OK</string>
    <string name="tv_av">AV/TV</string>
    <string name="tv_back">Return</string>
    <string name="stb">stb</string>
    <string name="str_stb">STB</string>
    <string name="stb_wait">Standby</string>
    <string name="stb_watch">Guides</string>
    <string name="stb_back">Return</string>
    <string name="stb_key0">0</string>
    <string name="stb_key1">1</string>
    <string name="stb_key2">2</string>
    <string name="stb_key3">3</string>
    <string name="stb_key4">4</string>
    <string name="stb_key5">5</string>
    <string name="stb_key6">6</string>
    <string name="stb_key7">7</string>
    <string name="stb_key8">8</string>
    <string name="stb_key9">9</string>
    <string name="stb_chadd">CH+</string>
    <string name="stb_chsub">CH-</string>
    <string name="stb_voladd">Vol+</string>
    <string name="stb_volsub">Vol-</string>
    <string name="stb_up">Up</string>
    <string name="stb_down">Down</string>
    <string name="stb_left">Left</string>
    <string name="stb_right">Right</string>
    <string name="stb_ok">OK</string>
    <string name="stb_menu">Menu</string>
    <string name="dvd">dvd</string>
    <string name="str_dvd">DVD</string>
    <string name="dvd_power">ON/OF</string>
    <string name="dvd_mute">Mute</string>
    <string name="dvd_quickforward">>></string>
    <string name="dvd_quickback"><![CDATA[<<]]></string>
    <string name="dvd_play">Play</string>
    <string name="dvd_stop">Stop</string>
    <string name="dvd_upsong"><![CDATA[|<<]]></string>
    <string name="dvd_downsong">>>|</string>
    <string name="dvd_pause">Pause</string>
    <string name="dvd_av">Format</string>
    <string name="dvd_title">Title</string>
    <string name="dvd_open">Pass in and out</string>
    <string name="dvd_menu">Menu</string>
    <string name="dvd_back">Return</string>
    <string name="dvd_up">Up</string>
    <string name="dvd_down">Down</string>
    <string name="dvd_left">Left</string>
    <string name="dvd_right">Right</string>
    <string name="dvd_ok">OK</string>
    <string name="fans">fans</string>
    <string name="str_fans">Fans</string>
    <string name="fans_power">ON/OFF</string>
    <string name="fans_mode"> Mode</string>
    <string name="fans_li">Anion</string>
    <string name="fans_speed">Air Volume</string>
    <string name="fans_key0">ON/Wind</string>
    <string name="fans_speedlow">Low Speed</string>
    <string name="fans_speedmiddle">Medium Speed</string>
    <string name="fans_speedhight">High Speed</string>
    <string name="fans_sleep">Sleep</string>
    <string name="fans_freq">Shake</string>
    <string name="fans_cool">Cold</string>
    <string name="fans_timer">Timing</string>
    <string name="fans_light">Light</string>
    <string name="fans_key1">1</string>
    <string name="fans_key2">2</string>
    <string name="fans_key3">3</string>
    <string name="fans_key4">4</string>
    <string name="fans_key5">5</string>
    <string name="fans_key6">6</string>
    <string name="fans_key7">7</string>
    <string name="fans_key8">8</string>
    <string name="fans_key9">9</string>
    <string name="light">light</string>
    <string name="str_light">LAMP</string>
    <string name="light_power_all_on">All On</string>
    <string name="light_power_all_off">All Off</string>
    <string name="light_power_on">On</string>
    <string name="light_power_off">OFF</string>
    <string name="light_light">Brightness+</string>
    <string name="light_dark">Brightness-</string>
    <string name="light_lost">Burglar</string>
    <string name="light_keyA">A</string>
    <string name="light_keyB">B</string>
    <string name="light_keyC">C</string>
    <string name="light_keyD">D</string>
    <string name="light_setting">SET</string>
    <string name="light_study">Learn</string>
    <string name="light_key1">1</string>
    <string name="light_key2">2</string>
    <string name="light_key3">3</string>
    <string name="light_key4">4</string>
    <string name="light_key5">5</string>
    <string name="light_key6">6</string>
    <string name="light_timer1">Timing1</string>
    <string name="light_timer2">Timing2</string>
    <string name="light_timer3">Timing3</string>
    <string name="light_timer4">Timing4</string>
    <string name="pjt">pjt</string>
    <string name="str_pjt">PRJC</string>
    <string name="pjt_power_on">ON</string>
    <string name="pjt_power_off">OFF</string>
    <string name="pjt_computer">PC</string>
    <string name="pjt_video">VIDEO</string>
    <string name="pjt_sign">Source</string>
    <string name="pjt_zoomadd">Zoom +</string>
    <string name="pjt_zoomsub">Zoom -</string>
    <string name="pjt_pictureadd">Screens+</string>
    <string name="pjt_picturesub">Screens-</string>
    <string name="pjt_brightness">Brightness</string>
    <string name="pjt_auto">Auto</string>
    <string name="pjt_exit">Quit</string>
    <string name="pjt_menu">Menu</string>
    <string name="pjt_pause">Pause</string>
    <string name="pjt_mute">Mute</string>
    <string name="pjt_voladd">VOL+</string>
    <string name="pjt_volsub">VOL-</string>
    <string name="pjt_up">UP</string>
    <string name="pjt_down">DOWN</string>
    <string name="pjt_left">LEFT</string>
    <string name="pjt_right">RIGHT</string>
    <string name="pjt_ok">OK</string>
    <string name="air">air</string>
    <string name="str_air">ARC</string>
    <string name="air_power">ON/OF</string>
    <string name="air_tempadd">Up</string>
    <string name="air_tempsub">Down</string>
    <string name="air_mode">Mode</string>
    <string name="air_wind_count">Air volume</string>
    <string name="air_wind_dir">Manually Wind</string>
    <string name="air_wind_auto_dir">Auto Wind</string>
    <string name="air_mode_val">Mode:</string>
    <string name="air_temp_val">Temperature:</string>
    <string name="air_wind_dir_val">Wind Dir:</string>
    <string name="connect">Connection device</string>
    <string name="study">Learn</string>
    <string name="help">Help</string>
    <string name="options">select</string>
    <string name="about">About</string>
    <string name="quit">exit</string>
</resources>