<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_study_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/study_test" />

    <Button
        android:id="@+id/button_study_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/study_repeat" />

    <Button
        android:id="@+id/button_study_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/study_next" />
<!-- 
    <Button
        android:id="@+id/button_study_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/study_save" />
 -->
    <Button
        android:id="@+id/button_study_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/study_exit" />

</LinearLayout>