<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical" 
        android:layout_weight="3">

        <TextView
            android:id="@+id/title_paired_devices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#666"
            android:paddingLeft="5dp"
            android:text="@string/str_paired_devices"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <ListView
            android:id="@+id/paired_devices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stackFromBottom="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_new_devices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#666"
            android:paddingLeft="5dp"
            android:text="@string/str_other_devices"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
        <ListView
            android:id="@+id/new_devices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stackFromBottom="true" />
        <Button
            android:id="@+id/str_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="18dp"
            android:layout_marginRight="5dp"
            android:text="@string/str_find" />
    </LinearLayout>
</LinearLayout>